add complete registration step and improve user pages

--- a/config/locales/pt-br.json
+++ b/config/locales/pt-br.json
@@ -656,7 +656,7 @@
   "form-helper-register-confirmEmail": " ",
   "form-helper-register-confirmPassword": " ",
   "form-helper-register-email": " ",
-  "form-helper-register-fullName": " ",
+  "form-helper-register-fullName": "Nome completo, importante para atividades e certificados do sistema",
   "form-helper-register-gender": " ",
   "form-helper-register-organization": " ",
   "form-helper-register-password": " ",
@@ -681,7 +681,7 @@
   "form-helper-user-cfsession-topicIdSelector": " ",
   "form-helper-user-displayName": "O nome de exibição no sistema",
   "form-helper-user-email": " ",
-  "form-helper-user-fullName": " ",
+  "form-helper-user-fullName": "Nome completo, importante para atividades e certificados do sistema",
   "form-helper-user-gender": " ",
   "form-helper-user-organization": " ",
   "form-helper-user-setAlias": "Digite uma url interna para acessar o seu perfil ou deixe o campo vazio para usar a url padrão. Exemplo: /batman",
@@ -913,7 +913,7 @@
   "form-register-confirmPassword": "Repetir a senha",
   "form-register-email": "Email",
   "form-register-fullName": "Nome completo",
-  "form-register-gender": "Género",
+  "form-register-gender": "Sexo",
   "form-register-organization": "Organização",
   "form-register-password": "Senha",
   "form-register-submit": "Enviar",
@@ -1248,5 +1248,71 @@
   "user.post.find": "Postagens",
   "municipio.find": "Municípios Conveniados",
   "user.registered.success.msg": "Usuário cadastrado com sucesso",
-  "Send": "Enviar"
+  "Send": "Enviar",
+  "form-register-cpf": "CPF",
+  "form-placeholder-register-cpf": "Digite o CPF aqui...",
+  "form-helper-register-cpf": " ",
+  "form-register-estrangeiro": "Você não possuí um CPF?",
+  "form-placeholder-register-estrangeiro": " ",
+  "form-helper-register-estrangeiro": " ",
+
+  "form-user-cpf": "CPF",
+  "form-helper-user-cpf": " ",
+  "form-placeholder-user-cpf": " ",
+
+  "form-user-estrangeiro": "Sou estrangeiro e não possuo CPF",
+
+  "form-user-passaporte": "Passaporte",
+  "form-placeholder-user-passaporte": " ",
+  "form-helper-user-passaporte": "Número do passaporte caso não possua um CPF",
+
+  "form-user-cep": "CEP",
+  "form-helper-user-cep": "Exemplo: 25251-397",
+  "form-placeholder-user-cep": " ",
+
+  "form-register-country": "País",
+  "form-placeholder-register-country": " ",
+  "form-helper-register-country": "Selecione o país que você mora no campo acima.",
+  "form-register-locationState": "Estado",
+  "form-placeholder-register-locationState": " ",
+  "form-helper-register-locationState": "Selecione o estado onde você mora, por exemplo: Pernambuco",
+  "form-register-city": "Cidade",
+  "form-placeholder-register-city": " ",
+  "form-helper-register-city": "Selecione a cidade onde você mora, por exemplo: Recife",
+
+  "form-user-country": "País",
+  "form-placeholder-user-country": " ",
+  "form-helper-user-country": "Selecione o país que você mora no campo acima.",
+  "form-user-locationState": "Estado",
+  "form-placeholder-user-locationState": " ",
+  "form-helper-user-locationState": "Selecione o estado onde você mora, por exemplo: Pernambuco",
+  "form-user-city": "Cidade",
+  "form-placeholder-user-city": " ",
+  "form-helper-user-city": "Selecione a cidade onde você mora, por exemplo: Recife",
+
+  "form-user-cellphone": "Celular",
+  "form-placeholder-user-cellphone": " ",
+  "form-helper-user-cellphone": " ",
+
+  "form-user-phone": "Telefone fixo",
+  "form-placeholder-user-phone": " ",
+  "form-helper-user-phone": " ",
+  "cpf.passport.required.to.continue": "Preencha e salve os campos obrigatórios do seu perfil para participar do site Saúde é meu lugar",
+
+  "fill.all.fields": "Preencha todos os campos!",
+
+  "form-complete-registration-cellphone": "Celular",
+  "form-placeholder-complete-registration-cellphone": " ",
+  "form-helper-complete-registration-cellphone": "Telefone celular",
+  "form-complete-registration-phone": "Telefone",
+  "form-placeholder-complete-registration-phone": " ",
+  "form-helper-complete-registration-phone": "Telefone fixo",
+  "form-complete-registration-cpf": "CPF",
+  "form-placeholder-complete-registration-cpf": " ",
+  "form-helper-complete-registration-cpf": "Cadastro de Pessoas Físicas - CPF",
+  "form-complete-registration-passaporte": "Passaporte",
+  "form-placeholder-complete-registration-passaporte": " ",
+  "form-helper-complete-registration-passaporte": "Preencha o passaporte apenas se não possuír o CPF",
+  "form-complete-registration-estrangeiro": "Sou estrangeiro e não possuo CPF",
+  "form-complete-registration-salvar": "Salvar"
 }
