add history breadcrumbs and user.publishedHistoryCount attr

--- a/config/locales/pt-br.json
+++ b/config/locales/pt-br.json
@@ -1327,5 +1327,6 @@
   "file.audio.select.btn": "Adicionar audio",
   "audio.selector": "Adicionar audio",
   "audio.uploader.title": "Envio de audio",
-  "audio.upload.selector.btn": "Clique para enviar"
+  "audio.upload.selector.btn": "Clique para enviar",
+  "history.delete.confirm.msg": "Tem certeza que deseja deletar essa história?<br>Essa ação não é permanente."
 }
