add support for login with cfp or email and improve auth pages

--- a/config/locales/pt-br.json
+++ b/config/locales/pt-br.json
@@ -35,9 +35,9 @@
   "auth.forgot-password.email.send": "A nova senha foi enviada para seu email.",
   "auth.forgot-password.reset-password": "Redefinir senha",
   "auth.login.authenticated.msg": "Você está autenticado, <a href='/auth/logout'>clique aqui para sair do sistema</a>.",
-  "auth.login.user.incorrect.password.or.email": "Email ou senha incorretos.",
+  "auth.login.user.incorrect.password.or.email": "CPF, e-mail ou senha incorretos.",
   "auth.login.user.not.active": "Você precisa validar a sua conta de usuário antes de entrar no sistema",
-  "auth.login.wrong.email.or.password": "Seu email ou senhas estão incorretos ou você não está registrado no sistema",
+  "auth.login.wrong.email.or.password": "Seu CPF, e-mail ou senhas estão incorretos ou você não está registrado no sistema",
   "auth.new-password": "Nova senha",
   "auth.new-password.set.successfully": "A sua senha foi atualizada com sucesso",
   "auth.newPassword.and.password.diferent": "Os campos senha e repetir senha estão diferentes.",
@@ -630,7 +630,7 @@
   "form-helper-link-title": " ",
   "form-helper-link-weight": " ",
   "form-helper-link-userRole": "Selecione o perfile de usuário que verá o link no menu ou deixe em branco para público",
-  "form-helper-login-email": "Seu email",
+  "form-helper-login-email": "Digite o seu CPF ou e-mail cadastrado no sistema",
   "form-helper-login-password": " ",
   "form-helper-menu-class": " ",
   "form-helper-menu-name": " ",
@@ -657,10 +657,12 @@
   "form-helper-register-confirmPassword": " ",
   "form-helper-register-email": " ",
   "form-helper-register-fullName": "Nome completo, importante para atividades e certificados do sistema",
+  "form-helper-register-displayName": "Nome de exibição no sistema",
   "form-helper-register-gender": " ",
   "form-helper-register-organization": " ",
   "form-helper-register-password": " ",
   "form-helper-register-username": " ",
+  "form-helper-register-cep": "Exemplo: 25251-397",
   "form-helper-sitecontact-email": "Digite o seu email",
   "form-helper-sitecontact-message": "Escreva a mensagem que você deseja enviar para os administradores site",
   "form-helper-sitecontact-name": "Digite o seu nome",
@@ -701,7 +703,7 @@
   "form-link-title": "Title",
   "form-link-weight": "Peso",
   "form-link-userRole": "Perfil de usuário",
-  "form-login-email": "Email",
+  "form-login-email": "CPF",
   "form-login-password": "senha",
   "form-login-persistent": "Permanecer logado",
   "form-login-submit": "Enviar",
@@ -846,7 +848,7 @@
   "form-placeholder-link-title": " ",
   "form-placeholder-link-weight": " ",
   "form-placeholder-link-userRole": "Público",
-  "form-placeholder-login-email": "Digite o seu email aqui ...",
+  "form-placeholder-login-email": "Digite o seu CPF aqui ...",
   "form-placeholder-login-password": "Digite a sua senha aqui ...",
   "form-placeholder-menu-class": " ",
   "form-placeholder-menu-name": " ",
@@ -872,8 +874,10 @@
   "form-placeholder-register-confirmPassword": " ",
   "form-placeholder-register-email": " ",
   "form-placeholder-register-fullName": " ",
+  "form-placeholder-register-displayName": " ",
   "form-placeholder-register-password": " ",
   "form-placeholder-register-username": " ",
+  "form-placeholder-register-cep": " ",
   "form-placeholder-role-name": "Digite o nome do novo role aqui...",
   "form-placeholder-sitecontact-email": " ",
   "form-placeholder-sitecontact-message": " ",
@@ -913,11 +917,13 @@
   "form-register-confirmPassword": "Repetir a senha",
   "form-register-email": "Email",
   "form-register-fullName": "Nome completo",
+  "form-register-displayName": "Nome de exibição",
   "form-register-gender": "Sexo",
   "form-register-organization": "Organização",
   "form-register-password": "Senha",
   "form-register-submit": "Enviar",
   "form-register-username": "Nome de usuário",
+  "form-register-cep": "CEP",
   "form-role-name": "Nome",
   "form-sitecontact-email": "Email de resposta",
   "form-sitecontact-message": "Mensagem",
@@ -1178,7 +1184,7 @@
   "form-comment-createdAt": "Criado em:",
   "form-helper-comment-createdAt": " ",
   "form-placeholder-comment-createdAt": " ",
-  "auth.login.user.dont.have.password": "O email não possuí senha registrada no sistema, use a página de resetar a senha para gerar uma senha.",
+  "auth.login.user.dont.have.password": "A conta de usuário não possuí senha registrada no sistema, use a página de resetar a senha para gerar uma senha.",
   "public": "público",
   "private": "privado",
   "manager": "gerente",
@@ -1250,7 +1256,7 @@
   "user.registered.success.msg": "Usuário cadastrado com sucesso",
   "Send": "Enviar",
   "form-register-cpf": "CPF",
-  "form-placeholder-register-cpf": "Digite o CPF aqui...",
+  "form-placeholder-register-cpf": "Cadastro de Pessoas Físicas - CPF",
   "form-helper-register-cpf": " ",
   "form-register-estrangeiro": "Você não possuí um CPF?",
   "form-placeholder-register-estrangeiro": " ",
@@ -1272,13 +1278,13 @@
 
   "form-register-country": "País",
   "form-placeholder-register-country": " ",
-  "form-helper-register-country": "Selecione o país que você mora no campo acima.",
+  "form-helper-register-country": "Clique e selecione o país que você mora no campo acima.",
   "form-register-locationState": "Estado",
   "form-placeholder-register-locationState": " ",
-  "form-helper-register-locationState": "Selecione o estado onde você mora, por exemplo: Pernambuco",
+  "form-helper-register-locationState": "Clique e selecione o estado onde você mora, por exemplo: Pernambuco",
   "form-register-city": "Cidade",
   "form-placeholder-register-city": " ",
-  "form-helper-register-city": "Selecione a cidade onde você mora, por exemplo: Recife",
+  "form-helper-register-city": "Clique e selecione a cidade onde você mora, por exemplo: Recife",
 
   "form-user-country": "País",
   "form-placeholder-user-country": " ",
