update roles and add improve people homepage widget

--- a/config/locales/pt-br.json
+++ b/config/locales/pt-br.json
@@ -1332,5 +1332,7 @@
   "audio.url.uploader.title": "Audio salvo na internet",
   "audio.url.selector.btn": "URL do audio:",
   "file.url.select.btn": "Adicionar",
-  "url.remove": "Remover"
+  "url.remove": "Remover",
+  "Enable": "Ativar",
+  "Block": "Bloquear"
 }
