add some logo and tpl updates

--- a/config/locales/pt-br.json
+++ b/config/locales/pt-br.json
@@ -1065,8 +1065,8 @@
   "sitecontact.form.title": "Entrar em contato",
   "sitecontact.link": "Entrar em contato",
   "sitecontact.message.subject": "você recebeu uma nova mensagem de contato do site {{site.name}}",
-  "sitecontact.send.email": "A mensagem foi enviada com sucesso",
-  "sitecontact.success.email.subject": "A mensagem foi enviada com sucesso",
+  "sitecontact.send.email": "A mensagem foi enviada com sucesso. Em breve a equipe do Saúde É Meu Lugar entrará em contato com você!",
+  "sitecontact.success.email.subject": "A mensagem foi enviada com sucesso. Em breve a equipe do Saúde É Meu Lugar entrará em contato com você!",
   "skip.to.content.link.text": "Ir para o conteúdo principal",
   "term.create": "Criar termo",
   "term.delete.confirm.msg": "Você tem certeza que deseja deletar esse termo?",
